Fixed experience when on mobile

--- a/animals.css
+++ b/animals.css
@@ -742,15 +742,30 @@ border-radius: 50%;
 
 
 @media screen and (max-width: 800px) {
-    * {
-      outline: solid red 3px;
-      /* zoom: 80%; */
 
-      
-    }
     html, body {
         height: 100vh;
         width: 100vw;
+    }
+
+    .mobileCover {
+        background-color: black;
+        color: white;
+        height: 10vh;
+        width: 100vw;
+        position: absolute;
+        z-index: 5000;
+        top: 0%;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: redfade 1s infinite alternate both;
+    }
+
+    @keyframes redfade {
+        from{color: rgb(85, 0, 0);}
+        to{color: red;}
     }
 
     .hud {
